[package]
name = "watch"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "1.1.1"
miniserde = { default-features = false, version = "0.1" }

[profile.release]
panic = "abort"
lto = true
strip = true
